--- a/assets/style.css
+++ b/assets/style.css
@@ -699,7 +699,7 @@ table.open {
         width: 100%;
         font-family: "Poppins";
         padding: 10px;
-        background-color: #007bff;
+        background-color: #3f015c;
         color: white;
         border: none;
         border-radius: 4px;
@@ -707,7 +707,7 @@ table.open {
     }
     
     .submit-btn:hover {
-        background-color: #0056b3;
+        background-color: #714bad;
     }
     
     .avaliacoes-recentes {
