--- a/assets/style.css
+++ b/assets/style.css
@@ -45,7 +45,7 @@ body{
     background-color: #8c52ff68;
     padding: 15px 20px 15px 15px;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 16px;
     
 }
 
@@ -60,7 +60,7 @@ body{
 }
 
 .medalhas > h1{
-    margin: 0 40% 5% 40%;
+    margin: 0 37% 5% 37%;
     border-bottom: #fff ridge;
     text-align: center;
 }
@@ -152,7 +152,7 @@ input[type="int"] {
     display: grid;
     width: 100%;
     grid-template-columns: repeat(6, 1fr);
-    gap: 40px;
+    gap: 4%;
     padding: 10px;
 }
 
@@ -161,6 +161,18 @@ input[type="int"] {
     color: #fff;
     padding: 15px;
     border-radius: 10px;
+}
+
+.avaliacao-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 120%;
+}
+
+.avaliacao-item p {
+    margin: 4% 0;
 }
 
 /* Quadro de Medalhas */
@@ -549,13 +561,13 @@ table.open {
     border-radius: 20px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1300px) {
     body {
         font-size: 12px;
     }
 
     .description {
-        font-size: 11px;
+        font-size: 13px;
     }
 
     .slogan {
