--- a/assets/style.css
+++ b/assets/style.css
@@ -143,16 +143,17 @@ input[type="int"] {
 
 .avaliacoes-recentes {
     display: flex;
-    margin: 5% 5%;
+    margin: 5% 0;
     align-items: center;
     flex-direction: column;
+    max-width: 100%;
 }
 
 .avaliacoes-recentes > div {
     display: grid;
     width: 100%;
     grid-template-columns: repeat(6, 1fr);
-    gap: 4%;
+    gap: 2%;
     padding: 10px;
 }
 
@@ -168,7 +169,7 @@ input[type="int"] {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 120%;
+    width: 100%;
 }
 
 .avaliacao-item p {
